# NKTgLaw

./: CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-commercial.txt  README.md  SECURITY.md  ai-manifest.json  nktg_installer.iss
api/: README.md  openapi.yaml  server.cpp  server.hpp
benchmarks/: Benchmark.cs  Benchmark.csproj  benchmark.asm  benchmark.cpp  benchmark.go  benchmark.java  benchmark.js  benchmark.m  benchmark.py  benchmark.qs  benchmark.rs  benchmark.sql  benchmark.swift
clients/cpp/: CMakeLists.txt  NKTgClient.cpp  README.md  example.cpp  httplib.h  nktg.cpp
clients/cpp/tests/: test_nktg.cpp  test_nktg_api.cpp
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs  main.rs
clients/rust/tests/: nktg_tests.rs
core/: core.hpp  lib.cpp  nktg.cpp  nktg.hpp  units.cpp  units.hpp  utils.cpp  utils.hpp
docs/: architecture.md  diagrams  overview.md  reference.md  roadmap.md  usage-guide.md
examples/: C++.cpp  Java.java  abap_snippets.abap  actionscript_snippets.as  algol_snippets.alg  alice_snippets.txt  ambienttalk_snippets.at  angelscript_snippets.as  apex_snippets.cls  apl_snippets.apl  arc_snippets.arc  arduino_snippets.ino  aspnet_snippets.cshtml  assembly_snippets.asm  assemblyscript_snippets.ts  ats_snippets.dats  awk_snippets.awk  ballerina_snippets.bal  bash_snippets.sh  basic_snippets.bas  bc_snippets.bc  beef_snippets.bf  blitzmax_snippets.bmx  boo_snippets.boo  bosque_snippets.bosque  brainfuck_snippets.bf  c_snippets.c  carbon_snippets.carbon  clojure_snippets.clj  cobol_snippets.cbl  (+123 more)
(+110 files in other folders)
